Added validation for unique cities in route creation